package eapli.base.gestaoservicoshelpdesk.repositories;

public interface UtilizadorRepository {
}
